# logfacil

./: README.md  pyproject.toml
logfacil/: etl.py  log.py  setup.py
tests/: test_controller.py
