[tool.poetry]
name = "logfacil"
version = "0.1.2"
description = "Configuração rápida para logs de chamadas de funções python"
authors = ["Rafael Felipe da Silva <rafaelfelipesiilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
